--- a/.gitignore
+++ b/.gitignore
@@ -8,12 +8,13 @@ FACE/data/**.npy
 FACE/train/models/*
 data/power/end2end/power.npy
 *_pool.npy
-end2end/end2end-bootstrap/**
+end2end/end2end-bootstrap/*.csv
 end2end/end2end-evaluations/**
 end2end/experiment-records/**
 end2end/figures/
 end2end/model-evaluation/** 
 end2end/parsed-records/**
-models/**
-!models/**origin_models
+models/
 take-over.md
+!end2end/**/tmp
+# !models/**origin_models
