--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ data/power/end2end/power.npy
 end2end/end2end-bootstrap/*.csv
 end2end/end2end-evaluations/*
 end2end/experiment-records/*
-end2end/figures/
+# end2end/figures/
 end2end/model-evaluation/*
 end2end/parsed-records/*
 models/*
