--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .idea/*
 *.pyc
-*/checkpoints/*
+Naru/checkpoints/
 *-sample*.npy
 *power.npy
 FACE/evaluate/oracle/*
@@ -19,4 +19,4 @@ take-over.md
 !end2end/**/tmp
 !models/**origin_models
 !models/end2end
-!models/checkpoints
+!models/checkpoints/
